fix introduction align

--- a/style.scss
+++ b/style.scss
@@ -27,9 +27,8 @@ body {
   padding-right: 10px;
 
   &__title {
-    h2 {
-      text-align: center;
-    }
+    text-align: center;
+
   }
 
   &__text {
